fixed chrome header collapse

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,38 +61,6 @@ body a {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-.head-nav ul li {
-    display: inline-block;
-    margin: 0 .5em;
-    outline: none;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 400;
-    font-size: 16px;
-}
-.head-nav ul li a:hover, .head-nav ul li.active a {
-    color: #fff;
-}
-ul a:hover, ul a:focus {
-    outline: none;
-    color: #fff;
-    text-decoration: none;
-}
-.cl-effect-15 a::before {
-    color: #8ca9b9;
-    content: attr(data-hover);
-    position: absolute;
-    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-    -moz-transition: -moz-transform 0.3s, opacity 0.3s;
-    transition: transform 0.3s, opacity 0.3s;
-}
-.cl-effect-15 a:hover::before, .cl-effect-15 a:focus::before {
-    -webkit-transform: scale(0.9);
-    -moz-transform: scale(0.9);
-    transform: scale(0.9);
-    opacity: 0;
-}
 .header-right ul li {
     display: inline-block;
     float: left;
@@ -106,34 +74,6 @@ ul a:hover, ul a:focus {
 }
 .header-right li {
     margin: 0 0.5em;
-}
-i.fb {
-    width: 30px;
-    height: 32px;
-    background: url(../images/img-sprite.png)no-repeat -153px -6px;
-    float: left;
-    vertical-align: middle;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-}
-i.fb:hover {
-    background: url(../images/img-sprite.png)no-repeat -153px -47px;
-}
-i.twt {
-    width: 30px;
-    height: 32px;
-    background: url(../images/img-sprite.png)no-repeat -8px -40px;
-    float: left;
-    vertical-align: middle;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-}
-i.twt:hover {
-    background: url(../images/img-sprite.png)no-repeat -49px -40px;
 }
 /*--start-search--*/
 
@@ -1713,15 +1653,19 @@ ul.links li.last {
 html, body {
     height: 100%;
 }
+#headerSlide {
+    width: 100%;
+    height: 20% !important;
+}
 header {
-    height: 50px;
+    height: 160px;
+    display: block;
 }
 #content {
     min-height: 100%;
     height: auto !important;
-    /*margin-top: 70px;*/
+    margin-top: 100px;
     margin-bottom: 40px;
-    min-height: 100%;
 }
 footer {
     height: 40px;
@@ -1775,4 +1719,7 @@ md-grid-tile {
     -moz-transition: all 500ms ease-out 100ms;
     -o-transition: all 500ms ease-out 100ms;
     transition: all 500ms ease-out 100ms;
+}
+.header-slide-img {
+    height: 20% !important;
 }
